tests/ui/mir/issue-75053.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-75053.rs:46:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

